--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "highcharts": "^6.2.0",
     "highcharts-vue": "^1.2.0",
     "jquery": "^3.3.1",
+    "json2csv": "^4.3.1",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
     "vuex": "^3.0.1"
